# pyMCU

./: pyproject.toml
pymcu/: README.md  explore.py  mcu.py  messages.py  monitor.py
pymcu/helpers/: managed_fader.py  simulator.py  surface_model.py
pymcu/messages/: __init__.py  button.py  fader.py  hardware_mapping.py  meter.py  sysex.py  vpot.py
